tools/vendor/datatest-stable/tests/compile-fail/incorrect-arg-in-pattern.rs
datatest_stable::harness! {
    { test = my_test, root = "tests/files", foo = "bar", }
}
